--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -8,17 +8,20 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <div class="container">
-    <h1 th:text="${appName}" style="color: green">Default app name</h1>
+    <h1 style="color: green">Добавить новый пост</h1>
     <hr/>
     <div class="content">
         <div class="row">
             <div class="col-md-12">
-                <form method="purchase">
+                <form method="post">
                     <div class="form-group">
-                        <textarea name="text" class="form-control" cols="30" rows="7" placeholder="Text"></textarea>
+                        <textarea name="text" class="form-control" cols="30" rows="7" placeholder="Текст"></textarea>
                     </div>
                     <div class="form-group">
-                        <input type="submit" class="btn btn-primary" value="Добавить новый пост">
+                        <textarea name="description" class="form-control" cols="30" rows="7" placeholder="Описание"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" class="btn btn-primary" value="Добавить">
                     </div>
                 </form>
             </div>
