--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -6,34 +6,33 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <div class="container">
-    <h1 style="color: green; display: inline-block;">Список покупок</h1>
-    <button onclick="location.href='/items/new'" class="btn-success" style="float: right; margin: 15px">Добавить покупку</button>
+    <h1 class="title">Список покупок</h1>
+    <button onclick="location.href='/items/new'" class="btn-success add">Добавить покупку</button>
     <hr/>
     <div class="content">
         <div class="row article" th:each="purchase : ${purchases}">
-            <div class="col-md-11 description">
-                <h3 class="description-text" th:text="${purchase.text}">Текст</h3>
+            <input th:attr="data-purchase-id=${purchase.id},bought=${purchase.bought}"
+                   th:checked="${purchase.bought}"
+                   type="checkbox"
+                   class="checkbox"/>
+            <h3 class="description-text col-md-11 description" th:text="${purchase.text}">Текст</h3>
+            <h5 class="col-md-10 col-md-offset-1" th:text="${purchase.description}" style="display: block">Описание</h5>
+            <p class="col-md-10 col-md-offset-1"
+               th:text="${'Дата добавления ' + purchase.creationDate.toLocaleString()}">Дата добавления 2019.09.08</p>
+            <div class="buttons">
+                <form th:action="${'/items/'+purchase.id}" th:method="get">
+                    <button th:type="submit" class="btn-info">Открыть</button>
+                </form>
+                <form th:action="${'/items/'+purchase.id}" th:method="delete">
+                    <button th:type="submit" class="btn-danger">Удалить</button>
+                </form>
             </div>
-            <div class="col-md-10 col-md-offset-1">
-                <h5 th:text="${purchase.description}">Описание</h5>
-            </div>
-            <div class="col-md-10 col-md-offset-1">
-                <p th:text="${'Дата добавления ' + purchase.creationDate.toLocaleString()}">Дата добавления 2019.09.08</p>
-            </div>
-            <form th:action="${'/items/'+purchase.id}" th:method="get">
-                <button th:type="submit" class="btn-info" style="margin: 5px">Открыть</button>
-            </form>
-            <form th:action="${'/items/'+purchase.id}" th:method="delete">
-                <button th:type="submit" class="btn-danger" style="margin: 5px">Удалить</button>
-            </form>
-<!--            <a th:href="/items/${purchase.id}" th:type="delete" class="btn-danger">Удалить</a>-->
-            <div class="col-md-12">
-                <hr/>
-            </div>
+            <hr/>
         </div>
     </div>
 </div>
